# fastmcp-pdftools

./: README.md  pyproject.toml
.github/workflows/: tests.yml
