[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastmcp-pdftools"
version = "0.1.0"
description = "MCP PDF reader server allowing to read  PDF files"
authors = [
  { name = "Ola Tarkowska", email = "ola@entrypoint.tech" }
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "pypdf>=6.0.0"
]
[project.scripts]
fastmcp-pdftools = "src.fastmcp_pdftools.server:main"


[tool.hatch.build.targets.wheel]
include = ["server.py"]